--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<title>Wheezy</title>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -33,7 +37,7 @@
 		</div>
 	</nav>
 	<div class="wrap">
-		<h1 align="center">wheezy</h1>
+		<h1 align="center"><span style="color: #009eb2">w</span>elcome</h1>
 	</div>
 </section>
 <section id="content-1">
@@ -116,7 +120,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-1">&nbsp;</div>
-			<div class="col-md-5">
+			<div class="col-md-5 col-sm-6">
 				<div class="spacer"></div>
 				<h1 class="touch">keep in <b>touch</b></h1>
 				<div class="row">
@@ -138,7 +142,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-5">
+			<div class="col-md-5 col-sm-6">
 				<div class="spacer"></div>
 				<h1 class="touch">my last <b>activity</b></h1>
 				<div class="media">
